--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #6c63ff;
-  --primary-font: "Poppins";
-  --title-font: "Playfair Display";
+  --primary-font: "Poppins", sans-serif;
+  --title-font: "Playfair Display", sans-serif;
 }
 
 .container {
@@ -9,23 +9,26 @@
   text-align: center;
   font-family: var(--primary-font);
   display: block;
-  margin: 150px 0 auto;
+  margin: 0 auto;
+}
+.hero {
+  margin-top: 150px;
 }
 h1 {
   font-family: var(--title-font);
-  font-weight: 700px;
+  font-weight: bold;
   font-size: 96px;
   line-height: 127px;
   margin: 10px;
 }
 h2 {
-  font-weight: 700px;
+  font-weight: normal;
   font-size: 36px;
   margin: 10px;
   line-height: 54px;
 }
 h3 {
-  font-weight: 400px;
+  font-weight: normal;
   font-size: 24px;
   margin: 10px;
   line-height: 36px;
