--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   font-family: var(--default-font-family);
 }
 
-
 h1,
 h2,
 h3,
@@ -75,6 +74,20 @@ p {
 .projects h2 {
   font-size: 30px;
 }
+.about-text h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-text h5 {
+  font-family: var(--default-font-family);
+  font-size: 18px;
+}
+.about-text p {
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  opacity: 0.7;
+}
 
 @media (max-width: 576px) {
   .project-text h2 {
@@ -89,6 +102,9 @@ p {
     width: 200px;
   }
   .project-text p {
+    text-align: center;
+  }
+  .about-text {
     text-align: center;
   }
 }
