--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ p {
 .hero {
   text-align: center;
   padding: 160px 20px;
+  background: var(--secondary-color);
 }
 
 .hero p {
@@ -134,3 +135,4 @@ p {
     text-align: center;
   }
 }
+
